--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "chalk": "^4.1.2",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "express": "^4.18.2",
     "install": "^0.13.0",
