--- a/src/infrastructure/driving-adapters/express/docs/swagger.es.yaml
+++ b/src/infrastructure/driving-adapters/express/docs/swagger.es.yaml
@@ -10,9 +10,9 @@ info:
     name: Orbaf Team
     url: https://orbaf.com.ar
 servers:
-  - url: https://orbaf.com.ar
+  - url: https://orbaf.com.ar/api
     description: Servidor de producción
-  - url: http://localhost:3000
+  - url: http://localhost:3000/api
     description: Servidor de desarrollo
 paths:
   /:
